# AuraSynth

./: .prettierrc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
public/: splashscreen.html
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: cache.ts  checkIsSvgDataUrl.ts  evaluateVolume.ts  filenameNormalization.ts  formatSeconds.ts  mediaSession.ts  musicFiles.ts  musicFolders.ts  namedNodeMapToObject.ts  pictures.ts  preloadImage.ts  shuffle.ts  theme.ts  toImageUrl.ts
src/lib/components/: AlbumArtwork.svelte  AlbumItem.svelte  Albums.svelte  Artwork.svelte  FloatingFocus.svelte  Header.svelte  MovingText.svelte  NoMusicMessage.svelte  PlaybackStateToggle.svelte  Player.svelte  PlayerControls.svelte  PlayerTracksOptions.svelte  ReloadMusic.svelte  Slider.svelte  SongArtwork.svelte  Songs.svelte  Svg.svelte  ThemeSelector.svelte  VolumeSlider.svelte
src/lib/pages/: settings.svelte
src/lib/routes/: Albums.svelte  Songs.svelte
src/lib/stores/: folders.ts  music.ts  theme.ts
src/lib/styles/: floating-focus.css  globals.css
src/lib/types/: album.d.ts  lyrics.d.ts  picture.d.ts  song.d.ts
